--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="./src/css/main.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="ex-container">
+      <div class="ex-container__item">
+        <a href="./src/html/live-code-editor.html">Live code editor</a>
+      </div>
+
+      <div class="ex-container__item">
+        <a href="./src/html/tender.html">Tender</a>
+      </div>
+    </div>
+  </body>
 </html>
